<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pozadina1"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="40dp"
        android:paddingRight="30dp">


        <!--Name-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolor">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Name"
                android:inputType="textPersonName"
                android:textColor="#D5D6D2">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <!--Prezime-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolor">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Surname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Surname"
                android:inputType="textPersonName"
                android:textColor="#D5D6D2">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>


        <!--Datum rodjenja-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolor">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dateOfBirthEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/DateOfBirth"
                android:inputType="date"
                android:textColor="#D5D6D2">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>


        <!--Email-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolor">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eMail"
                android:inputType="textEmailAddress"
                android:textColor="#D5D6D2">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>


        <!--Mobile number-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolor">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:textColor="#D5D6D2">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>


        <!--City-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolor">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="text"
                android:textColor="#D5D6D2">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>


        <!--//Requsted Username-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolor">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:inputType="text"
                android:textColor="#D5D6D2">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>


        <!--Password-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolor"
            app:passwordToggleEnabled="true">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reqPassword"
                android:inputType="textPassword"
                android:textColor="#D5D6D2">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>


        <!--Confirm Password-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolor"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirmedPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmedPassword"
                android:inputType="textPassword"
                android:textColor="#D5D6D2">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttonborder"
            android:hint="Register"
            android:textColor="@color/orange"
            android:textColorHint="@color/backbuttoncolor" />


    </LinearLayout>

</ScrollView>


