<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/pozadina1"
    android:orientation="vertical"
    android:padding="5dp">
    <!--tools:context=".MapActivity"-->


    <!--Layout filteri-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        tools:layout_editor_absoluteX="5dp">

        <!--app:layout_constrantBottom_toBottomOf="@+id/textViewTitle"-->
        <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewType"
                android:layout_width="107dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ObjectType"
                android:textAlignment="center"
                android:textColor="@color/textcolor"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinnerObjectType"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/orangeborder"
                android:ems="10"
                android:text="@string/chooseType" />
            <!--android:entries="@array/listObjectTypes"-->

        </LinearLayout>


        <!--Filter music -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="66dp"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/textViewType"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textViewMusic"
                android:layout_width="107dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ObjectMusic"
                android:textAlignment="center"
                android:textColor="@color/textcolor" />

            <Spinner
                android:id="@+id/spinnerObjectMusic"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/orangeborder"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/objectMusic" />
        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
