<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <RelativeLayout
        android:id="@+id/R1"
        android:layout_width="414dp"
        android:layout_height="739dp"
        android:alpha="0.5"
        android:background="@drawable/chill1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/R1">


        <Button
            android:id="@+id/logInButton"
            android:layout_width="156dp"
            android:layout_height="50dp"
            android:layout_below="@+id/saveLoginCheckBox"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/orangeborder1"
            android:text="@string/LogIn"
            android:textColor="#D5D6D2"
            android:textSize="23sp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="156dp"
            android:layout_height="50dp"
            android:layout_below="@+id/logInButton"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/orangeborder1"
            android:text="@string/Register"
            android:textColor="#D5D6D2"
            android:textSize="23sp"
            tools:text="Register" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/trasparent"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:paddingLeft="3dp"
            android:textColor="@color/backbuttoncolor"
            android:textColorHint="@color/colorAccent3"
            android:textColorLink="@color/textcolor"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/logInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.246"
            tools:targetApi="o" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:textColorHint="@color/colorAccent3"
            app:passwordToggleEnabled="true">

            <EditText

                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/trasparent"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="3dp"
                android:textColor="@color/backbuttoncolor"
                android:textColorHint="@color/backbuttoncolor"
                android:textColorLink="@color/textcolor"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/logInButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
                app:layout_constraintVertical_bias="0.105"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/guestButton"
            android:layout_width="208dp"
            android:layout_height="50dp"
            android:layout_below="@+id/registerButton"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/orangeborder1"
            android:text="@string/guestButton"
            android:textColor="#D5D6D2"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/saveLoginCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/trasparent"
            android:padding="3dp"
            android:text="Remember me"
            android:textColor="@color/colorAccent3"
            android:textColorHint="@color/colorAccent3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="104dp"
            android:layout_height="122dp"
            android:layout_below="@+id/guestButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guestButton"
            app:srcCompat="@drawable/logo" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>