<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:id="@+id/container_wrapper"
    tools:context=".MapActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            android:background="@color/colorWhite"
            android:id="@+id/relLayoutSearch">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:id="@+id/searchImage"
                android:src="@drawable/ic_search"/>


            <EditText
                android:id="@+id/edit_Text_Search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/searchImage"
                android:layout_toRightOf="@id/searchImage"
                android:background="@null"
                android:hint="@string/EditTextLocalSearch"
                android:textColor="@color/orange"
                android:textSize="15sp" />


            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="136dp"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/edit_Text_Search"
                android:layout_alignRight="@+id/edit_Text_Search"
                android:layout_marginStart="224dp"
                android:layout_marginLeft="224dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/searchImage"
                android:layout_toRightOf="@+id/searchImage"
                android:background="@drawable/orangeborder"
                android:text="@string/searchButton"
                android:textColor="@color/textcolor"
                android:textSize="12sp" />



        </RelativeLayout>

        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="30"-->
            <!--android:id="@+id/RecyclerViewBar">-->

        <!--</android.support.v7.widget.RecyclerView>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100"
            android:id="@+id/map_container">


            <com.google.android.gms.maps.MapView
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            </com.google.android.gms.maps.MapView>

            <Button
                android:id="@+id/buttonFilters"
                android:layout_width="136dp"
                android:layout_height="50dp"
                android:layout_alignTop="@+id/map_view"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="266dp"
                android:layout_marginLeft="266dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/buttonborder"
                android:text="@string/filterButton"
                android:textColor="@color/colorAccent3"
                android:textSize="12sp" />


        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>